--- a/src/DurableCards/DurableCards.csproj
+++ b/src/DurableCards/DurableCards.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdaptiveCards.Rendering.Html" Version="2.4.0" />
+    <PackageReference Include="AdaptiveCards.Templating" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
