--- a/samples/DurableCardsSample/DurableCardsSample.csproj
+++ b/samples/DurableCardsSample/DurableCardsSample.csproj
@@ -20,4 +20,9 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="welcome.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
