--- a/src/DurableCards/DurableCards.csproj
+++ b/src/DurableCards/DurableCards.csproj
@@ -7,6 +7,9 @@
   <ItemGroup>
     <PackageReference Include="AdaptiveCards.Rendering.Html" Version="2.4.0" />
     <PackageReference Include="AdaptiveCards.Templating" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="NJsonSchema" Version="10.3.2" />
   </ItemGroup>
 
 </Project>
